<resources>
    <string name="app_name">전시로그</string>
    <string name="user_level_beginner">전시초보</string>
    <string name="user_level_intermediate">전시중수</string>
    <string name="user_level_advanced">전시고수</string>
    <string name="user_level_master">전시마스터</string>
    <string name="btn_delete">삭제</string>
    <string name="btn_delete_dialog">삭제하기</string>
    <string name="btn_report">신고하기</string>
    <string name="btn_register">등록</string>
    <string name="btn_modify">수정</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_move">이동</string>
    <string name="btn_close">닫기</string>
    <string name="btn_setting">설정</string>
    <string name="btn_confirm">확인</string>
    <string name="btn_wrting_review_close">창 닫기</string>
    <string name="btn_save">저장하기</string>
    <string name="btn_public">공개</string>
    <string name="btn_private">비공개</string>
    <string name="btn_load_image">갤러리에서 불러오기</string>
    <string name="btn_load_poster">전시회 포스터 불러오기</string>
    <string name="btn_set_delete_image">이미지 삭제하기</string>
    <string name="btn_set_defalut_image">기본 이미지로 변경</string>
    <string name="btn_move_exhibition">전시회 바로가기</string>
    <string name="btn_following">팔로잉</string>
    <string name="btn_follow">팔로우</string>
    <string name="btn_f4f">맞팔로우</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_unlink">회원탈퇴</string>
    <string name="btn_unlink_recheck">탈퇴하기</string>
    <string name="btn_report_poster">불편함 접수하기</string>
    <string name="btn_start">시작하기</string>
    <string name="btn_refresh">새로고침</string>
    <string name="btn_duplicate">중복확인</string>
    <string name="toggle_change_to_admin">관리자</string>
    <string name="toggle_change_to_user">사용자</string>
    <string name="date_now">지금</string>
    <string name="date_min">%d분 전</string>
    <string name="date_hour">%d시간 전</string>
    <string name="date_yesterday">어제</string>
    <string name="date_day">%d일 전</string>
    <string name="dialog_report">%1$s 신고는 취소할 수 없어요. \n 해당 %1$s을 신고하시겠어요?</string>
    <string name="dialog_delete">삭제된 %1$s은 복구할 수 없어요. \n 해당 %1$s을 삭제하시겠어요?</string>
    <string name="dialog_close_review">지금까지 작성한 감상평이 사라져요. \n 창을 닫으시겠어요?</string>
    <string name="dialog_unlink_comment">탈퇴 시, 모든 데이터가 사라져요.</string>
    <string name="dialog_unlink_sub_comment">정말 탈퇴하시겠어요?</string>
    <string name="dialog_nick_modify_title">닉네임 수정</string>
    <string name="dialog_nick_modify_hint">2~10글자, 특수문자, 공백 사용 불가</string>
    <string name="dialog_nick_duplicate">중복된 닉네임이에요</string>
    <string name="dialog_nick_prohibited_words_check">부적절한 단어가 포함되어 있어요.</string>
    <string name="dialog_failure_internet">인터넷에 연결할 수 없어요 \n새로고침을 하거나 \n네트워크 설정을 확인해주세요</string>
    <string name="dialog_fcm">알림을 허용하면\n전시회 소식을 바로 알 수 있어요!</string>
    <string name="dialog_admin_edit_exhibition_name">전시회 이름 수정</string>
    <string name="dialog_admin_edit_place_name">전시공간 이름 수정</string>
    <string name="dialog_admin_edit_place_address">전시공간 주소 수정</string>
    <string name="dialog_admin_edit_place_call">전시공간 전화번호 수정</string>
    <string name="dialog_admin_edit_place_homepage">전시공간 홈페이지 링크 수정</string>
    <string name="dialog_admin_edit_exhibition_information">전시회 정보 수정</string>
    <string name="dialog_level_up_first">감상평을 남기셨군요!\n우리 전시마스터를 향해 가볼까요?</string>
    <string name="dialog_level_up">축하합니다!\n %1$s가 되었어요!</string>
    <string name="toast_copy_success">복사 성공!</string>
    <string name="toast_save_success">저장 성공!</string>
    <string name="toast_save_failure">저장 실패!</string>
    <string name="toast_poster_download_failure">저장 실패. 다시 시도해주세요.</string>
    <string name="toast_poster_report_failure">접수 실패. 다시 시도해주세요.</string>
    <string name="toast_notification_go_review_exception">없어진 감상평이에요.</string>
    <string name="toast_notification_go_reply_exception">없어진 댓글이에요.</string>
    <string name="toast_exhibition_place_call_empty">등록된 전화번호가 없어요.</string>
    <string name="toast_exhibition_place_homepage_empty">등록된 링크가 없어요.</string>
    <string name="toast_exhibition_place_address_empty">등록된 전시장 주소 정보가 없어요.</string>
    <string name="toast_delete_review">감상평이 삭제되었어요.</string>
    <string name="toast_exhibition_name_empty">전시회 이름은 비워둘 수 없어요!</string>
    <string name="toast_exhibition_update">전시회 정보가 업데이트 되었습니다.</string>
    <string name="toast_admin_keyword_full">키워드를 삭제해 주세요!</string>
    <string name="toast_admin_keyword_has">이미 존재하는 키워드예요!</string>
    <string name="toast_delete_reply">댓글이 삭제되었어요.</string>
    <string name="toast_report_success">신고가 정상적으로 접수되었어요.</string>
    <string name="toast_managing_full">전시회를 삭제해 주세요!</string>
    <string name="toast_managing_requre_full">전시회 10개를 채워주세요!</string>
    <string name="toast_managing_duplication">이미 존재하는 전시회예요!</string>
    <string name="toast_search_check_regex">해당 검색어는 검색할 수 없어요.</string>
    <string name="toast_input_filter">올바른 형식으로 입력해주세요!</string>
    <string name="login_nick_placeholder">닉네임을 입력하세요</string>
    <string name="login_nick_hint">2~10글자, 특수문자, 공백 사용 불가</string>
    <string name="login_nick_check_success">사용 가능한 닉네임이에요.</string>
    <string name="login_nick_check_duplicate">중복된 닉네임이에요.</string>
    <string name="login_nick_check_forbidden">부적절한 단어가 포함되어 있어요.</string>
    <string name="login_nick_check_special_char">특수문자 및 공백은 사용할 수 없어요.</string>
    <string name="login_nick_check_is_pair">자음 또는 모음을 홀로 사용할 수 없어요.</string>
    <string name="home_title_popular">요즘 뜨는 전시</string>
    <string name="home_title_artistic">다채로운 예술의 향연</string>
    <string name="home_title_end_soon">곧 종료되는 전시</string>
    <string name="home_title_new_start">새로 시작한 전시</string>
    <string name="keyword_state_before">시작전</string>
    <string name="keyword_state_on">전시중</string>
    <string name="keyword_free">무료</string>
    <string name="exhibition_information">전시회 정보</string>
    <string name="exhibition_address_empty">전시장 주소 정보가 없어요</string>
    <string name="exhibition_more_info">| &#160;...더보기</string>
    <string name="exhibition_rating">평균 별점</string>
    <string name="exhibition_review">감상평</string>
    <string name="exhibition_reply">댓글</string>
    <string name="exhibition_reply_count">댓글 %1$d</string>
    <string name="exhibition_writing_review">감상평 작성하기</string>
    <string name="exhibition_writing_review_hint">여기에 감상평을 입력하세요!</string>
    <string name="exhibition_reply_hint">댓글을 남겨 보세요!</string>
    <string name="exhibition_writing_review_count">(%1$s/1000)</string>
    <string name="search_edit_hint">검색어를 입력하세요</string>
    <string name="search_exhibition_name">전시회를 검색해 주세요</string>
    <string name="search_recent_title">최근검색어</string>
    <string name="search_title">검색</string>
    <string name="search_random_exhibition">이런 전시회도 있어요</string>
    <string name="search_tablayout_item1">전시</string>
    <string name="search_tablayout_item2">전시장</string>
    <string name="search_tablayout_item3">사용자</string>
    <string name="search_photocalendar_title">전시회 포스터 불러오기</string>
    <string name="search_photocalendar_edit_hint">전시회 이름을 입력하세요</string>
    <string name="calendar_mon">월</string>
    <string name="calendar_tue">화</string>
    <string name="calendar_wed">수</string>
    <string name="calendar_thu">목</string>
    <string name="calendar_fri">금</string>
    <string name="calendar_sat">토</string>
    <string name="calendar_sun">일</string>
    <string name="sun_tx">일</string>
    <string name="mon_tx">월</string>
    <string name="tue_tx">화</string>
    <string name="wed_tx">수</string>
    <string name="thu_tx">목</string>
    <string name="fri_tx">금</string>
    <string name="sat_tx">토</string>
    <string name="noti_title">알림</string>
    <string name="noti_activity_tab">활동</string>
    <string name="noti_exhibition_tab">전시</string>
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_my_rating">나의 별점</string>
    <string name="mypage_my_rating_count">내가 남긴 별점 개수: %d개</string>
    <string name="mypage_my_review">나의 감상평</string>
    <string name="mypage_review_count">내가 남긴 감상평 개수: %d개</string>
    <string name="mypage_favorites">즐겨찾기</string>
    <string name="mypage_following">팔로잉</string>
    <string name="mypage_follower">팔로워</string>
    <string name="other_rating">별점</string>
    <string name="other_review">감상평</string>
    <string name="other_photo">포토캘린더</string>
    <string name="other_nick_title">%s 님의 프로필</string>
    <string name="other_my_rating_count">%s 님이 남긴 별점 개수: %d개</string>
    <string name="other_review_count">%s 님이 남긴 감상평 개수: %d개</string>
    <string name="setting_title">환경설정</string>
    <string name="setting_noti">알림</string>
    <string name="setting_exhibition">전시</string>
    <string name="setting_activity">활동</string>
    <string name="setting_terms_of_service">이용약관</string>
    <string name="setting_version">버전 정보 v.%s</string>
    <string name="admin_report_reply">님의 댓글이 신고됐어요.</string>
    <string name="admin_report_poster">포스터 등록이 필요해요.</string>
    <string name="admin_report_review">님의 감상평이 신고됐어요.</string>
    <string name="admin_exhibition_place_name_empty">전시공간 이름 없음</string>
    <string name="admin_exhibition_place_address_empty">전시공간 주소 없음</string>
    <string name="admin_exhibition_place_call_empty">전시공간 전화번호 없음</string>
    <string name="admin_exhibition_place_homepage_empty">전시공간 홈페이지 주소 없음</string>
    <string name="admin_exhibition_information_empty">전시회 정보 없음</string>
    <string name="admin_exhibition_poster_empty">포스터 이미지를 추가해주세요.</string>
    <string name="admin_report_title">접수된 신고</string>
    <string name="admin_report_review_content">"<b>%1$s</b> 님의 감상평이 신고됐어요."</string>
    <string name="admin_report_reply_content">"<b>%1$s</b> 님의 댓글이 신고됐어요."</string>
    <string name="admin_report_poster_content">"<b>[%1$s]</b> 포스터 등록이 필요해요."</string>
    <string name="admin_report_phone_content">"<b>[%1$s]</b> 전화번호 등록이 필요해요."</string>
    <string name="admin_report_link_content">"<b>[%1$s]</b> 링크 등록이 필요해요."</string>
    <string name="admin_report_address_content">"<b>[%1$s]</b> 주소 등록이 필요해요."</string>
    <string name="admin_report_count_over_nine">9+</string>
    <string name="admin_managing_search_hint">전시회명을 입력하세요.</string>
    <string name="empty_search_title">검색 결과가 없어요.</string>
    <string name="empty_search_description">검색어를 다시 확인해 주세요.</string>
    <string name="empty_poster_title">포스터 이미지를 준비 중이에요.</string>
    <string name="empty_poster_description">조금만 기다려 주세요.</string>
    <string name="empty_my_follower">아직 팔로워가 없어요.</string>
    <string name="empty_my_following_title">아직 팔로잉이 없어요.</string>
    <string name="empty_my_following_description">원하는 사용자를 팔로우 해보세요.</string>
    <string name="empty_my_rating_title">아직 남긴 별점이 없어요.</string>
    <string name="empty_my_rating_description">전시회 관람 후, 별점을 남겨보세요.</string>
    <string name="empty_my_review_title">아직 남긴 감상평이 없어요.</string>
    <string name="empty_my_review_description">전시회 관람 후, 감상평을 남겨보세요.</string>
    <string name="empty_my_interest_title">아직 즐겨찾기가 없어요.</string>
    <string name="empty_my_interest_description">마음에 드는 전시회를 즐겨찾기 해보세요.</string>
    <string name="empty_other_follower">팔로워가 없어요.</string>
    <string name="empty_other_following">팔로잉이 없어요.</string>
    <string name="empty_other_rating">기록된 별점이 없어요.</string>
    <string name="empty_other_review">기록된 감상평이 없어요.</string>
    <string name="empty_other_photocalendar">포토캘린더가 비공개 되어있어요.</string>
    <string name="tos_comment">전시로그를 이용하시려면\n동의가 필요해요</string>
    <string name="tos_all">전체 동의</string>
    <string name="tos_tos">개인정보 처리방침 (필수)</string>
    <string name="tos_permission_photo">사진 접근 권한 동의 (선택)</string>
    <string name="tos_next">다음</string>
    <string name="permission_modify">해제를 원하시면 설정에서 해당 권한을 직접 거부하셔야 합니다.</string>
    <string name="permission_denied">사진 접근 권한이 거부되었습니다.\n사용을 원하시면 설정에서 해당 권한을 직접 허용하셔야 합니다.</string>
    <string name="msg_token_fmt">FCM 토큰: %1$s</string>
    <string name="btn_stop">정지</string>
</resources>